--- a/micro-front-ends/presentation/index.html
+++ b/micro-front-ends/presentation/index.html
@@ -63,6 +63,7 @@
         <section>
           <section>
             <h3>Le Monolithe</h3>
+            <h4>Snowboard shop app!</h4>
             <div class="row">
               <div
                 class="d-flex justify-content-center align-items-center flex-column w-100"
@@ -70,10 +71,10 @@
                 <p class="fragment fade-in bg-primary m-0 w-50 rectangle">
                   Front End
                 </p>
-                <p class="fragment fade-up bg-secondary m-0 w-50 rectangle ">
+                <p class="fragment fade-up bg-primary m-0 w-50 rectangle ">
                   Back End
                 </p>
-                <p class="fragment fade-down bg-secondary m-0 w-50 rectangle">
+                <p class="fragment fade-down bg-primary m-0 w-50 rectangle">
                   Data Base
                 </p>
               </div>
@@ -103,26 +104,72 @@
             <h3>
               l'arrivée des micros services côté back
             </h3>
+            <div class="row">
+              <div
+                class="d-flex justify-content-center align-items-center flex-column w-100"
+              >
+                <p class="bg-primary m-0 w-50 mb-5 rectangle">
+                  Front End
+                </p>
+                <div class="d-flex w-50 ">
+                  <div
+                    class="fragment col fade-up m-2 p-4 bg-secondary text-vertical"
+                  >
+                    Payment Service
+                  </div>
+                  <div
+                    class="fragment col fade-up m-2 p-4 bg-secondary text-vertical"
+                  >
+                    Product Service
+                  </div>
+                  <div
+                    class="fragment col fade-up m-2 p-4 bg-secondary text-vertical"
+                  >
+                    Cart Service
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
           <section>
             <h3>
               l'idée de créer des micro fronts ends
             </h3>
+            <div class="row">
+              <div
+                class="d-flex justify-content-center align-items-center flex-column w-100"
+              >
+                <div class="d-flex w-70 ">
+                  <div
+                    class="fragment col fade-up m-2 p-4 bg-primary long"
+                  >
+                    Team Payment
+                  </div>
+                  <div
+                    class="fragment col fade-up m-2 p-4 bg-primary long"
+                  >
+                    Team Product
+                  </div>
+                  <div
+                    class="fragment col fade-up m-2 p-4 bg-primary long"
+                  >
+                    Team Cart
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
           <section>
             <h3>
               Pour quelles applications ?
             </h3>
           </section>
-		</section>
-		
-
-
+        </section>
 
         <!-- SLIDE2 -->
         <section>
           <h2>
-            Du monolithique au microlithique
+            les Web Components à la rescousse
           </h2>
           <section></section>
           <section></section>
