team alpha created

--- a/micro-front-ends/presentation/index.html
+++ b/micro-front-ends/presentation/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>reveal.js</title>
+    <title>microfrontends</title>
 
     <link rel="stylesheet" href="css/reset.css" />
     <link
@@ -173,9 +173,19 @@
               </ol>
               <p>Moins</p>
               <ol>
-                <li>More complex - In a distributed system, you have to create the connection between all databases and modules, </li>
-                <li>Testing - Since the microservices architecture consists of several components each of which can be deployed separately, testing becomes much more difficult. </li>
-                <li> Cross-cutting concerns - These issues include externalized configuration, logging and other issues. </li>
+                <li>
+                  More complex - In a distributed system, you have to create the
+                  connection between all databases and modules,
+                </li>
+                <li>
+                  Testing - Since the microservices architecture consists of
+                  several components each of which can be deployed separately,
+                  testing becomes much more difficult.
+                </li>
+                <li>
+                  Cross-cutting concerns - These issues include externalized
+                  configuration, logging and other issues.
+                </li>
               </ol>
             </aside>
           </section>
@@ -204,27 +214,45 @@
               <p>Les plus :</p>
               <ol>
                 <li>Separate deploys for separate services</li>
-                <li>Ability of autonomous teams to independently iterate and innovate</li>
-                <li>Ability to organize teams around business units or products</li>
+                <li>
+                  Ability of autonomous teams to independently iterate and
+                  innovate
+                </li>
+                <li>
+                  Ability to organize teams around business units or products
+                </li>
               </ol>
 
-              
               <p>Les moins :</p>
               <ol>
-                <li>Needing to have many different applications running in development to test a complete experience</li>
+                <li>
+                  Needing to have many different applications running in
+                  development to test a complete experience
+                </li>
                 <li>Tracking and debug problems across the entire system</li>
                 <li>Dealing with versioning across the system</li>
-                <li>With each team making their own technology choices, browsers may end up downloading multiple frameworks & duplicate code</li>
-                <li>Users don’t experience your company or product in isolation. This is one of the arguments against completely scoping styles to component - the problem may be even worse with completely separated teams.</li>
-                <li>Some of the implementations of microfrontends (particularly looking at embedding iframes) can cause huge accessibility challenges.</li>
+                <li>
+                  With each team making their own technology choices, browsers
+                  may end up downloading multiple frameworks & duplicate code
+                </li>
+                <li>
+                  Users don’t experience your company or product in isolation.
+                  This is one of the arguments against completely scoping styles
+                  to component - the problem may be even worse with completely
+                  separated teams.
+                </li>
+                <li>
+                  Some of the implementations of microfrontends (particularly
+                  looking at embedding iframes) can cause huge accessibility
+                  challenges.
+                </li>
               </ol>
             </aside>
           </section>
-          <section data-background-image="./assets/images/who.gif"> 
+          <section data-background-image="./assets/images/who.gif">
             <h3>
               Pour quelles applications ?
             </h3>
-
           </section>
         </section>
 
@@ -233,15 +261,62 @@
           <h2>
             les Web Components à la rescousse
           </h2>
-          <section></section>
-          <section></section>
+          <section>
+            <h3>c'est quoi ?</h3>
+
+            <aside class="notes">
+              <p>
+                Web components are a set of web platform APIs that allow you to
+                create new custom, reusable, encapsulated HTML tags to use in
+                web pages and web apps. Custom components and widgets build on
+                the Web Component standards, will work across modern browsers,
+                and can be used with any JavaScript library or framework that
+                works with HTML. Web components are based on existing web
+                standards. Features to support web components are currently
+                being added to the HTML and DOM specs, letting web developers
+                easily extend HTML with new elements with encapsulated styling
+                and custom behavior.
+              </p>
+
+              <h4>
+                Custom Elements
+              </h4>
+              <p>
+                The Custom Elements specification lays the foundation for
+                designing and using new types of DOM elements.
+              </p>
+
+              <h4>Shadow DOM</h4>
+
+              <p>
+                The shadow DOM specification defines how to use encapsulated
+                style and markup in web components.
+              </p>
+
+              <h4>ES Modules</h4>
+              <p>
+                The ES Modules specification defines the inclusion and reuse of
+                JS documents in a standards based, modular, performant way.
+              </p>
+
+              <h4>HTML Template</h4>
+              <p>
+                The HTML template element specification defines how to declare
+                fragments of markup that go unused at page load, but can be
+                instantiated later on at runtime.
+              </p>
+            </aside>
+          </section>
+          <section>
+              <h3>Création d'un web component</h3>
+          </section>
           <section></section>
         </section>
 
         <!-- SLIDE2 -->
         <section>
           <h2>
-            Du monolithique au microlithique
+            Application avec Angular et Vue
           </h2>
           <section></section>
           <section></section>
