creation du projet angular et du shell

--- a/micro-front-ends/angular-vue/shell.html
+++ b/micro-front-ends/angular-vue/shell.html
@@ -6,9 +6,9 @@
     <title>web components</title>
   </head>
   <body>
-    <alpha-buy board-brand="b_burton"></alpha-buy>
-    <alpha-cart></alpha-cart>
+    <alpha-buy label="Ajouter des articles au panier"></alpha-buy>
     <script src="alpha-buy.js"></script>
+    <script src="shell.js"></script>
     <!-- <script src="alpha-cart.js"></script> -->
   </body>
 </html>
