communication etablie entre les composants

--- a/micro-front-ends/angular-vue/shell.html
+++ b/micro-front-ends/angular-vue/shell.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <alpha-buy label="Ajouter des articles au panier"></alpha-buy>
-    <alpha-cart msg="hey !"></alpha-cart>
+    <alpha-cart quantite="0"></alpha-cart>
     <script src="alpha-buy.js"></script>
     <script src="alpha-cart.js/alpha-cart.js"></script>
     <script src="shell.js"></script>
