maj des textes de pres

--- a/micro-front-ends/web-components-demo/index.html
+++ b/micro-front-ends/web-components-demo/index.html
@@ -9,6 +9,6 @@
     <alpha-buy board-brand="b_burton"></alpha-buy>
     <alpha-cart></alpha-cart>
     <script src="alpha-buy.js"></script>
-    <!-- <script src="alpha-cart.js"></script> -->
+    <script src="alpha-cart.js"></script>
   </body>
 </html>
