created a shell for first example

--- a/micro-front-ends/web-components-demo/shell.html
+++ b/micro-front-ends/web-components-demo/shell.html
@@ -8,6 +8,7 @@
   <body>
     <alpha-buy board-brand="b_burton"></alpha-buy>
     <alpha-cart></alpha-cart>
+    <script src="shell.js"></script>
     <script src="alpha-buy.js"></script>
     <script src="alpha-cart.js"></script>
   </body>
